# dscforge

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yaml
dscforge/: cli.py  generator.py
dscforge/templates/basic/: main.ipynb
dscforge/templates/premium/: .gitignore  README.md
dscforge/templates/premium/notebooks/: main.ipynb
dscforge/templates/premium/src/: config.py  main.py  utils.py
dscforge/templates/premium/tests/: test.py
dscforge/templates/premium/web/pages/: index.html
dscforge/templates/standard/: .gitignore  README.md
dscforge/templates/standard/notebooks/: main.ipynb
dscforge/templates/standard/src/: main.py
