[project]
name = "dscforge"
version = "0.1.1"
description = "CLI tool for generating data science project templates"
authors = [{ name = "Jacob Doan" }]
requires-python = ">=3.8"
dependencies = [
    "click"
]

[project.scripts]
dscforge = "dscforge.cli:main"

[tool.setuptools.package-data]
"dscforge" = ["templates/**/*"]